# teraslab

./: .dockerignore  .gitignore  AUDIT.md  AUDIT_CODEX.md  CLAUDE.md  CLUSTER_E2E_FLAKINESS.md  CLUSTER_REMEDIATION_PLAN.md  CONFLICTING_CHILDREN_PLAN.md  Cargo.toml  DELETION_TOMBSTONE_DESIGN.md  LICENSE  PROFILING.md  README.md  REVIEW_REPORT.md  SPEC_VALIDATION_REPORT.md  clippy.toml  deny.toml  patch_process_expired.sh  patch_protocol.sh  test_process_expired.rs
.github/workflows/: ci.yml  nightly.yml  release.yml  weekly.yml
_review/: 00_orientation.md  01_scope.md  02_findings.md  02_findings_G1.md  02_findings_G10.md  02_findings_G2.md  02_findings_G3.md  02_findings_G4.md  02_findings_G5.md  02_findings_G6.md  02_findings_G7.md  02_findings_G8.md  02_findings_G9.md  03_crosscutting.md  04_fixes_G1.md  04_fixes_G10.md  04_fixes_G2.md  04_fixes_G3.md  04_fixes_G4.md  04_fixes_G5.md  04_fixes_G6.md  04_fixes_G7.md  04_fixes_G8.md  04_fixes_G9.md  05_test_followups.md  06_test_triage.md  07_cluster_edge_cases_triage.md  08_test_perf_audit.md  10_cluster_tcp_fixes.md  11_torn_read_fix.md  FIX_POLICY.md  ROADMAP_TO_100.md  follow_ups.md
_review/perf_runs/: per_test_timings.csv  per_test_timings_debug.csv
audit/: LEDGER.md  RESIDUAL_TRIAGE.md  coverage-matrix.md  dead-code-inventory.md  error-code-matrix.md  error-codes.md  spec-vs-impl.md
audit/raw/: A-utxo-correctness.md  A_utxo_correctness.md  B-crash-recovery.md  B_crash_durability.md  C-concurrency.md  C_concurrency.md  D-replication.md  D_replication.md  E-clustering.md  E_cluster_quorum.md  F-sharding-migration.md  F_shard_migration.md  G-index-backends.md  G_index_backends.md  H-wire-protocol.md  H_wire_protocol.md  IJ-storage-io.md  I_storage_blobs.md  J_io_layer.md  KO-pruning-bitcoin.md  K_pruning.md  LM-dos-observability.md  L_dos_limits.md  M_observability.md  N-test-infrastructure.md  N_test_infra.md  O_bitcoin_specific.md  category_A_utxo_correctness.md  category_BC_recovery_concurrency.md  category_D_replication.md  category_EF_cluster_migration.md  category_GH_index_protocol.md  category_IJK_storage_io_pruning.md  category_LMN_safety_obs_tests.md  dead-code-inventory.md  lua-parity.md  spec-vs-impl.md
bench/: FINAL_REPORT.md  HIGH_CONCURRENCY_RESULT.md  LINUX_NVME_REPORT.md  METHODOLOGY.md  PERF_LEDGER.md  RECIPE_CHAIN_FINDINGS.md  REFERENCE_CLIENT_ANALYSIS.md  RESUME.md
bench/configs/: teraslab-async.toml  teraslab-linux-nvme.toml
benches/: WRITE_PATH_BASELINE.md  alloc_profile.rs  allocator_ops.rs  codec_ops.rs  engine_remaining.rs  file_backed_index.rs  index_ops.rs  mixed_workload.rs  spend_throughput.rs  write_path.rs
client/go/: README.md  auth.go  auth_test.go  bench_test.go  block_entries_test.go  client.go  client_test.go  cluster.go  cluster_batch.go  codec.go  (+28 more)
client/rust/: Cargo.toml  README.md
client/rust/src/: cluster.rs  conn.rs  errors.rs  lib.rs  pool.rs  types.rs
docs/: COMPARISON_REPORT.md  DEPLOYMENT_ASSUMPTIONS.md  DURABILITY_CONTRACT.md  HARDWARE_RECOMMENDATIONS.md  MODULE_LAYOUT.md  PACKED_RECORD_STORAGE_DESIGN.md  PERFORMANCE_REPORT.md  REDO_SEGMENT_RING_DESIGN.md  TUNING_GUIDE.md  WRITE_CACHE_SPEC.md  observability.md
examples/: redo_fsync_scaling.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_request.rs
phases/: 00_analysis_and_spec.md  01_storage_layout.md  02_index.md  03_spend_path.md  04_setmined_path.md  05_creation_path.md  06_remaining_ops.md  07_crash_safety.md  08_replication.md  09_clustering.md  10_wire_protocol.md  11_tiered_storage.md  12_integration.md  13_admin_tooling.md
release-review/: COVERAGE.md  FINDINGS.md  GO-NOGO.md  PERF.md  REVIEW.md  session-log.md
scripts/: check_perf_budget.sh  cleanup-worktrees.sh  cut-release.sh  start-cluster.sh  start-single.sh
specs/: BSV_UTXO_STORE_RUST_CRATES.md  BSV_UTXO_STORE_SPEC.md  SEGMENT_CLUSTERING_DESIGN.md  SPEC_BRIEFING.md  teranode.lua  teranode.lua.PROVENANCE.md
src/: allocator.rs  cache.rs  checkpoint.rs  config.rs  device.rs  fault_injection.rs  fsutil.rs  io.rs  lib.rs  locks.rs  metrics.rs  record.rs  recovery.rs  redo.rs  redo_group.rs  segment_allocator.rs  streaming.rs  subdevice.rs  tombstone.rs  tombstone_gc.rs  visibility.rs
teraslab-tests/: run_all.sh  run_parallel.sh  run_timing.sh
teraslab-tests/client/: Cargo.toml  clippy.toml
teraslab-tests/client/src/: helpers.rs  lib.rs  reporter.rs  retry.rs  verifier.rs  workload.rs
teraslab-tests/client/tests/: debug_bootstrap_hold.rs  debug_term3_kill_hold.rs  scenario_01_cluster_formation.rs  scenario_02_basic_operations.rs  scenario_03_replication_correctness.rs  scenario_04_node_hard_kill.rs  scenario_05_node_recovery_catchup.rs  scenario_06_scale_up.rs  scenario_07_scale_down_graceful.rs  scenario_08_network_partition.rs  scenario_09_rolling_restart.rs  scenario_10_sustained_load.rs  scenario_11_large_transactions.rs  scenario_12_concurrent_failures.rs  scenario_13_data_migration_under_load.rs  scenario_14_split_brain_prevention.rs  scenario_15_crash_recovery_correctness.rs  scenario_16_chaos.rs  scenario_17_failure_recovery_hardening.rs
teraslab-tests/client/tests/common/: mod.rs
tests/: admin_top_isolation.rs  blob_gc_recovery.rs  block_device_size.rs  cli_integration.rs  cluster_delayed_activation.rs  cluster_edge_cases.rs  cluster_partition.rs  cluster_swim.rs  cluster_tcp.rs  crash_sweep_ops.rs  e2e_workload.rs  e5_auth_metrics.rs  error_code_conformance.rs  fault_injection.rs  g10_config.rs  g10_lifecycle.rs  g10_review.rs  g1_review.rs  g2_atomic_apply.rs  g2_create_size_contract.rs  g2_delete_race.rs  g2_overflow_alloc_accounting.rs  g2_reserved_spending_data.rs  g4_compact_zero_tail.rs  g4_create_v2_caps.rs  g4_freeze_v2_opcode.rs  g4_recovery_progress_bound.rs  g4_recovery_short_circuit.rs  g4_redo_append_only.rs  g4_redo_chunked_scan.rs  g4_redo_header.rs  g4_redo_poison.rs  g4_redo_reclamation.rs  g4_replay_create_warn.rs  g4_replay_freeze.rs  g4_reset_full_region.rs  g5_protocol_auth.rs  g5_slow_loris_streaming.rs  g8_cluster_id.rs  g8_e4_tcp_frame_replay.rs  (+32 more)
ui/: app.js  index.html  style.css
(+303 files in other folders)
