[package]
name = "teraslab"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "teraslab-server"
path = "src/bin/server.rs"

[[bin]]
name = "teraslab-cli"
path = "src/bin/cli.rs"


[features]
# Enables test-only fault-injection sync points across the write path.
# Production builds leave this disabled so the `fault_injection::check`
# calls compile to empty inline no-ops. Integration tests under
# `tests/fault_injection.rs` run with `--features fault-injection`.
fault-injection = []

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bitflags = "2"
# Zero-copy byte buffer for the wire-protocol frame decoder. Already a
# transitive dep via tokio/axum; promoting to a direct dep makes the
# RequestFrame::payload: Bytes use site explicit. C-6 / F-G5-011 (P3.4) —
# eliminates per-frame payload Vec allocation in the request hot path.
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crc32fast = "1"
crossterm = "0.28"
# Cross-platform signal handler (SIGINT + SIGTERM) for graceful shutdown.
# Pre-fix `ctrlc_handler` in the server binary was a no-op stub, so SIGINT /
# SIGTERM hard-killed the daemon and skipped the shutdown path entirely
# (cluster stop, index snapshot, allocator persist, replication-intent flush,
# device.sync, OTLP flush — none of it ran). `ctrlc` is a small, well-known
# crate (~200 LOC over `nix`/`winapi`) that registers a single handler and
# forwards SIGINT/SIGTERM to a closure. See F-G10-001 in the review.
ctrlc = { version = "3", features = ["termination"] }
getrandom = "0.2"
libc = "0.2"
mime_guess = "2"
parking_lot = "0.12"
redb = "2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Constant-time byte comparison for the HTTP admin bearer-token middleware.
# A naive `==` on tokens leaks the matching prefix length through reply timing
# (the comparison short-circuits on first mismatch). `subtle::ConstantTimeEq`
# always touches every byte, so reply timing is independent of the token.
# Already in the lock graph as a transitive dep of rustls; promoting it to a
# direct dep makes the use site explicit without adding to the build graph.
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# -- OpenTelemetry (Phase 4: OTLP tracing) --
# Minor-version triple pinned here: opentelemetry 0.31 / tracing-opentelemetry 0.32
# is the current coordinated release on crates.io. Using a different combination
# risks version-skew compile errors in the OpenTelemetry ecosystem.
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
filetime = "0.2"
prometheus-parse = "0.2"
proptest = "1"
tempfile = "3"

[[bench]]
name = "spend_throughput"
harness = false

[[bench]]
name = "mixed_workload"
harness = false

[[bench]]
name = "index_ops"
harness = false

[[bench]]
name = "allocator_ops"
harness = false

[[bench]]
name = "codec_ops"
harness = false

[[bench]]
name = "engine_remaining"
harness = false

[[bench]]
name = "alloc_profile"
harness = false
