# NOTE: this is intentionally a single-package crate, NOT a Cargo workspace.
# The sibling crates `client/rust` (teraslab-client) and `teraslab-tests/client`
# depend on `teraslab` by path but are kept OUT of a workspace so a plain
# `cargo build` / `cargo test --all` at the root stays lean (no clap CLI / test
# harness deps pulled into every default build). The trade-off is that root
# `cargo test --all` does NOT traverse them — which is how `client/rust` once
# rotted out of compilation (follow-up E-3). They are covered instead by
# dedicated `--manifest-path` steps in `.github/workflows/ci.yml` (rustfmt,
# clippy, and `cargo test`), so a recurrence is caught in CI. If you add a new
# sibling crate, add matching CI steps for it there.
[package]
name = "teraslab"
version = "0.7.0"
edition = "2024"
# Server application, not a published library — prevents accidental
# `cargo publish` and lets cargo-deny's `licenses.private` skip the
# first-party crate's (absent) SPDX license field.
publish = false

[[bin]]
name = "teraslab-server"
path = "src/bin/server.rs"

[[bin]]
name = "teraslab-cli"
path = "src/bin/cli.rs"


[features]
# Enables test-only fault-injection sync points across the write path.
# Production builds leave this disabled so the `fault_injection::check`
# calls compile to empty inline no-ops. Integration tests under
# `tests/fault_injection.rs` run with `--features fault-injection`.
fault-injection = []

# Slow benchmarks-as-tests gated behind this so `cargo test` is fast by default.
# Run them with `cargo test --features slow-tests`. CI nightly should pass it;
# the per-PR job should not. Currently gates the three big offenders in
# `src/index/hashtable.rs::tests`: `ten_million_entries`, `bench_lookup_1m`,
# `bench_insert_throughput` (~520s debug saved on every default test run).
slow-tests = []

[dependencies]
axum = { version = "0.8", features = ["ws"] }
# base64url decode for the `/ws/top` Sec-WebSocket-Protocol auth path: the UI
# base64url-wraps the admin token (`Bearer64.<...>`) because the recommended
# `openssl rand -base64` token contains `+ / =`, which are illegal in a raw
# WebSocket subprotocol. Already in the tree transitively via axum.
base64 = "0.22"
bitflags = "2"
# Zero-copy byte buffer for the wire-protocol frame decoder. Already a
# transitive dep via tokio/axum; promoting to a direct dep makes the
# RequestFrame::payload: Bytes use site explicit. C-6 / F-G5-011 (P3.4) —
# eliminates per-frame payload Vec allocation in the request hot path.
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
crc32fast = "1"
crossterm = "0.28"
# Cross-platform signal handler (SIGINT + SIGTERM) for graceful shutdown.
# Pre-fix `ctrlc_handler` in the server binary was a no-op stub, so SIGINT /
# SIGTERM hard-killed the daemon and skipped the shutdown path entirely
# (cluster stop, index snapshot, allocator persist, replication-intent flush,
# device.sync, OTLP flush — none of it ran). `ctrlc` is a small, well-known
# crate (~200 LOC over `nix`/`winapi`) that registers a single handler and
# forwards SIGINT/SIGTERM to a closure. See F-G10-001 in the review.
ctrlc = { version = "3", features = ["termination"] }
getrandom = "0.2"
libc = "0.2"
mime_guess = "2"
# Event-driven accept loop wake-up for graceful shutdown. The TCP listener
# and a self-pipe are registered with `mio::Poll`; flipping the shutdown
# flag writes a byte to the pipe so the loop wakes within microseconds
# instead of waiting for the next 10 ms `thread::sleep` tick. `mio` is a
# small (~10k LOC), zero-dep epoll/kqueue wrapper already in the tokio
# transitive graph, so promoting it to a direct dep does not enlarge the
# build.
mio = { version = "1", features = ["os-poll", "net"] }
parking_lot = "0.12"
# Work-stealing thread pool for intra-batch read fan-out. A single fat
# GetRecordBatch (teranode parent decoration, ~826 items) was walked in one
# serial loop on the connection thread, pinning the read/serving path to a
# single core. The decoration read path fans the per-item lookups across a
# dedicated rayon pool (src/server/dispatch.rs), order-preserving, under the
# already-held shared dispatch_visibility_barrier read guard.
rayon = "1"
# In-process CPU sampling profiler for the admin-gated `/debug/pprof/profile`
# endpoint (src/server/http.rs). Samples the whole process via SIGPROF +
# ITIMER_PROF and renders an inferno flamegraph SVG. Admin-gated and
# single-flight, so it is inert unless an operator deliberately requests a
# profile. The device pread/pwrite loops already retry EINTR (src/device.rs),
# so SIGPROF sampling does not perturb live I/O.
#
# `flamegraph` only — deliberately NOT `protobuf-codec` / `prost-codec`.
# `protobuf-codec` pulls the unmaintained rust-protobuf 2.x (RUSTSEC-2024-0437,
# fails cargo-audit) and `prost-codec` pulls a second, older prost (0.12) +
# prost-build alongside the tree's prost 0.14. The endpoint serves ONLY the SVG
# flamegraph; a `go tool pprof` protobuf is obtained via samply / `cargo
# flamegraph` instead (see PROFILING.md). `flamegraph` pulls `inferno`
# (CDDL-1.0); see the scoped license exception in deny.toml.
pprof = { version = "0.14", features = ["flamegraph"] }
redb = "2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# HMAC-SHA256 for cluster authentication (see src/cluster/auth.rs). The
# maintained RustCrypto `hmac` crate handles constant-time tag comparison
# via `Mac::verify_slice` and reuses the existing `sha2` dependency.
hmac = "0.12"
# Constant-time byte comparison for the HTTP admin bearer-token middleware.
# A naive `==` on tokens leaks the matching prefix length through reply timing
# (the comparison short-circuits on first mismatch). `subtle::ConstantTimeEq`
# always touches every byte, so reply timing is independent of the token.
# Already in the lock graph as a transitive dep of rustls; promoting it to a
# direct dep makes the use site explicit without adding to the build graph.
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# -- OpenTelemetry (Phase 4: OTLP tracing) --
# Minor-version triple pinned here: opentelemetry 0.31 / tracing-opentelemetry 0.32
# is the current coordinated release on crates.io. Using a different combination
# risks version-skew compile errors in the OpenTelemetry ecosystem.
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# Portable ioctl wrappers for block-device size queries on Linux + macOS.
# `nix::ioctl_read!` computes the correct encoded ioctl request number per
# target (including 32-bit Linux variants where the hard-coded
# `BLKGETSIZE64`/`DKIOCGETBLOCKCOUNT` integer constants in src/device.rs
# would silently `ENOTTY`).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["ioctl"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
filetime = "0.2"
prometheus-parse = "0.2"
# Property-based UTXO-conservation tests (tests/property_utxo.rs, N-03 /
# LMNH-16). Default-features-off keeps the fork-based runner out of the
# build; the in-process runner is sufficient and faster for CI.
proptest = { version = "1", default-features = false, features = ["std"] }
serial_test = "3"
tempfile = "3"

[[bench]]
name = "spend_throughput"
harness = false

[[bench]]
name = "mixed_workload"
harness = false

[[bench]]
name = "index_ops"
harness = false

[[bench]]
name = "allocator_ops"
harness = false

[[bench]]
name = "codec_ops"
harness = false

[[bench]]
name = "engine_remaining"
harness = false

[[bench]]
name = "alloc_profile"
harness = false

[[bench]]
name = "write_path"
harness = false

[profile.dev]
# Keep readable backtraces (file:line) but drop full DWARF, which dominates
# target/ size: the 68 integration-test binaries under tests/ each statically
# link the whole dep graph, and the `test` profile inherits this debug setting
# from `dev`. line-tables-only emits no slower than full debug (less codegen +
# link I/O), so this shrinks target/ — including every parallel-agent worktree
# checkout — without slowing builds. Trade-off: no local-variable inspection in
# an interactive debugger; panic/RUST_BACKTRACE traces are unaffected.
debug = "line-tables-only"
