[package]
name = "teraslab-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1"
libfuzzer-sys = "0.4"

[dependencies.teraslab]
path = ".."

[[bin]]
name = "decode_request"
path = "fuzz_targets/decode_request.rs"
test = false
doc = false
bench = false

# Detach from the parent package so `cargo check` / `cargo test` at the
# repo root never builds the fuzz crate (libfuzzer needs nightly).
[workspace]

[profile.release]
debug = 1
