[package]
name = "teraslab-test-client"
version = "0.1.0"
edition = "2024"

[dependencies]
teraslab = { path = "../.." }
teraslab-client = { path = "../../client/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time", "io-util", "sync", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
